website/versioned_docs/version-1.2.0/reference/api/index.mdx
# API Reference

Complete API documentation for the Quark ORM.

## Core API

- **[Client](/docs/reference/api/client)** - Creating and configuring the ORM client
- **[Query Builder](/docs/reference/api/query-builder)** - Fluent type-safe query construction
- **[CRUD](/docs/reference/api/crud)** - Create, Read, Update, Delete operations
- **[Querying](/docs/reference/api/querying)** - Retrieving data: List, Find, aggregates, pagination

## Model Definition

- **[Modeling](/docs/reference/api/modeling)** - Struct tags, relations, hooks

## Schema & Data

- **[Transactions](/docs/reference/api/transactions)** - ACID transactions and savepoints
- **[Migrations](/docs/reference/api/migrations)** - Schema migrations and sync

## Advanced Features

- **[Caching](/docs/reference/api/caching)** - Query result caching with Redis/Memory
- **[Multi-Tenant](/docs/reference/api/multi-tenant)** - Row-level, schema, and database isolation
- **[Observability](/docs/reference/api/observability)** - Middleware, OpenTelemetry, events

## Reference

- **[Dialects](/docs/reference/api/dialects)** - Database dialect interface
- **[Errors](/docs/reference/api/errors)** - Error types and handling
- **[Routines](/docs/reference/api/routines)** - Stored procedures and functions

## Quick Example

```go
package main

import (
    "context"

    _ "github.com/lib/pq"
    "github.com/jcsvwinston/quark"
)

type User struct {
    ID    int64  `db:"id" pk:"true"`
    Name  string `db:"name"`
    Email string `db:"email" quark:"unique"`
}

func main() {
    client, _ := quark.New("postgres", "...")
    ctx := context.Background()
    
    // Create
    user := &User{Name: "Alice", Email: "alice@example.com"}
    quark.For[User](ctx, client).Create(user)
    // => user.ID is populated with the generated primary key

    // Read
    u, _ := quark.For[User](ctx, client).Find(user.ID)
    // => u is the matching User; err is quark.ErrNotFound if no row exists

    // Query
    users, _ := quark.For[User](ctx, client).
        Where("active", "=", true).
        OrderBy("created_at", "DESC").
        List()
    // => users is a []User of active rows, newest first

    // Update
    u.Name = "Alice Smith"
    quark.For[User](ctx, client).Update(&u)
    // => returns (rowsAffected int64, err error)

    // Delete
    quark.For[User](ctx, client).Delete(&u)
    // => returns (rowsAffected int64, err error)
}
```
